--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,12 @@
 server {
     listen tde1.devpaas.sktelecom.com:80;
     server_name tde1.devpaas.sktelecom.com;
-    location / {
-            proxy_pass http://localhost:8095;
+    location /crowd {
+            proxy_pass http://10.40.100.43:8095;
             proxy_set_header    Host            $host;
             proxy_set_header    X-Real-IP       $remote_addr;
             proxy_set_header    X-Forwarded-for $remote_addr;
             port_in_redirect off;
-            proxy_redirect     http://localhost:8095            http://tde1.devpaas.sktelecom.com/
+            proxy_redirect     http://10.40.100.43:8095            http://tde1.devpaas.sktelecom.com/crowd
     }
 }
