--- a/tde-httpd.conf
+++ b/tde-httpd.conf
@@ -29,6 +29,7 @@
 # with ServerRoot set to "/etc/httpd" will be interpreted by the
 # server as "/etc/httpd/logs/foo.log".
 #
+
 ### Section 1: Global Environment
 #
 # The directives in this section affect the overall operation of Apache,
@@ -301,6 +302,13 @@ DocumentRoot "/var/www/html"
 <Directory />
     Options FollowSymLinks
     AllowOverride None
+    AuthName "Atlassian Crowd"
+    AuthType Basic
+    AuthBasicProvider crowd
+
+    CrowdAppName tde-crowd
+    CrowdAppPassword tde-crowd
+    CrowdURL http://tde-10.40.100.43:8095/crowd/
 </Directory>
 
 #
@@ -1007,5 +1015,7 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
 
-
-
+<VirtualHost *:80>
+  ProxyPass /crowd http://10.40.100.43:8095/crowd
+  ProxyPassReverse  /crowd http://70.130.150.14:8080/crowd
+</VirtualHost>
