--- a/tde-httpd.conf
+++ b/tde-httpd.conf
@@ -242,13 +242,13 @@ ServerAdmin you@example.com
     AllowOverride none
     Require all denied
     
-    AuthName "Atlassian Crowd"
-    AuthType Basic
-    AuthBasicProvider crowd
+    #AuthName "Atlassian Crowd"
+    #AuthType Basic
+    #AuthBasicProvider crowd
 
-    CrowdAppName tde-crowd
-    CrowdAppPassword tde-crowd
-    CrowdURL http://tde-10.40.100.43:8095/crowd/
+    #CrowdAppName tde-crowd
+    #CrowdAppPassword tde-crowd
+    #CrowdURL http://tde-10.40.100.43:8095/crowd/
 </Directory>
 
 #
