--- a/tde-httpd.conf
+++ b/tde-httpd.conf
@@ -551,6 +551,6 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 <VirtualHost *:80>
-  ProxyPass /crowd http://10.40.100.43:8095/crowd
-  ProxyPassReverse  /crowd http://70.130.150.14:8080/crowd
+  ProxyPass /crowd http://10.40.100.43:8095
+  ProxyPassReverse  /crowd http://70.130.150.14:8080
 </VirtualHost>
