--- a/tde-httpd.conf
+++ b/tde-httpd.conf
@@ -551,6 +551,6 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 <VirtualHost *:80>
-  ProxyPass /crowd http://10.40.100.43:8095/
-  ProxyPassReverse  /crowd http://10.40.100.43:8095/
+  ProxyPass /crowd/ http://10.40.100.43:8095/
+  ProxyPassReverse  /crowd/ http://10.40.100.43:8095/
 </VirtualHost>
