--- a/metatron-httpd.conf
+++ b/metatron-httpd.conf
@@ -551,33 +551,6 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 <VirtualHost *:80>
-  ProxyPass /crowd/ http://10.40.100.43:8095/crowd/
-  ProxyPassReverse  /crowd/ http://10.40.100.43:8095/crowd/
-  
-  ProxyPass /pms/ http://10.40.100.43:10000/pms/
-  ProxyPassReverse  /pms/ http://10.40.100.43:10000/pms/
-  
-  ProxyPass /tde/ http://10.40.100.43:20000/tde/
-  ProxyPassReverse  /tde/ http://10.40.100.43:20000/tde/
-  
-  ProxyPass /wiki/ http://10.40.100.44:30000/wiki/
-  ProxyPassReverse  /wiki/ http://10.40.100.44:30000/wiki/  
-  
-  ProxyPass /stash/ http://10.40.100.44:40000/stash/
-  ProxyPassReverse  /stash/ http://10.40.100.44:40000/stash/    
-
-  ProxyPass /jenkins/ http://10.40.100.44:50000/jenkins/
-  ProxyPassReverse  /jenkins/ http://10.40.100.44:50000/jenkins/
-  
-  ProxyPass /gitlab/ http://10.40.100.44:45000/gitlab/
-  ProxyPassReverse  /gitlab/ http://10.40.100.44:45000/gitlab/
-    
-  ProxyPass /elastic/ http://10.40.100.43:9200/elastic/
-  ProxyPassReverse  /elastic/ http://10.40.100.43:9200/elastic/
-
-  ProxyPass /sonarqube/ http://10.40.100.44:9000/sonarqube/
-  ProxyPassReverse  /sonarqube/ http://10.40.100.44:9000/sonarqube/
-    
-  ProxyPass /xwiki/ http://10.40.100.44:10000/xwiki/
-  ProxyPassReverse  /xwiki/ http://10.40.100.44:10000/xwiki/   
+  ProxyPass / http://exntu.kr:38180/
+  ProxyPassReverse  / http://exntu.kr:38180/
 </VirtualHost>
